# InsightsGPT

./: .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LLM_SystemPrompt  Makefile  README.md  SystemPrompt  Whitepaper  congressgov_openapi.yaml  mkdocs.yml  patch.diff  pyproject.toml  regulationsgov_openapi.yaml  requirements-dev.txt  requirements.txt  test-file.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
alerts/: README.md
config/: federal_register_terms.txt  keywords.txt
data/: README.md  test.txt
data_connections/: GovInfo_openapi.yaml  README.md  congressgov_openapi.yaml  endpoints.txt  federalregistergov_openapi.yaml  github_openapi.yaml  ldasenategov_openapi.yaml  openFECgov_openapi.yaml  placeholder.txt  regulationsgov_openapi.yaml
datasets/: README.md
docs/: AI_SYSTEM_README.md  CHANGELOG.md  GITHUB_ORGANIZATION_THESIS.md  GUIDE_FOR_UPDATES_AND_DOCUMENTATION.md  LLM_SystemPrompt.md  ONBOARDING.md  Sample_Workflows.md  USAGE_GUIDE_FOR_AI.md  alerts.md  charts.md  index.md
insightsgpt.egg-info/: SOURCES.txt
logs/: README.md  log.txt
models/: README.md  train_bill_forecasting_model.py
sample_data/: sample_document.json
scripts/: Submit_Regulation_Comment  Submit_Regulation_Comment.py  bill_similarity.py  dashboard.py  fetch_bill_metadata.py  fetch_comments_clean.py  fetch_congress.py  fetch_federal_register.py  fetch_federal_register_data.py  fetch_fr.py  fetch_fr_docs.py  fetch_govinfo.py  fetch_real_time_signals.py  fetch_regulations.py  fr_client.py  generate_datasets.py  placeholder.txt  (+9 more)
(+55 files in other folders)
